--- a/stripe-custom-flow/package.json
+++ b/stripe-custom-flow/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "publish": "ngrok http 4242",
     "serve": "nodemon server.js",
+    "debug": "* $ DEBUG=express:* node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +22,7 @@
     "stripe": "^10.7.0"
   },
   "devDependencies": {
+    "ngrok": "^4.3.3",
     "nodemon": "^2.0.19"
   }
 }
